# vals-sdk

./: .gitignore  CLAUDE.md  Makefile  README.md  codegen-config.toml  exports.sh  out.csv  pyproject.toml  rag_scores_90fed5f8-fb1a-4fd8-bb15-d67c1b1006b7.json  sdk_example.py  setup.py  test.ipynb  test_rerun_checks.py
.github/workflows/: publish-to-pypi.yml  style.yaml  test.yaml  typecheck.yaml
examples/: leya_example.py  out.csv
examples/data_files/: custom_metric.py
examples/example_run_configs/: bluej_run_config.json  sample_run_config.json
examples/example_scripts/: sdk_example.py  sdk_example_with_context.py  sdk_example_with_create.py  sdk_example_with_file.py  sdk_example_with_update.py
examples/example_suites/: example_extraction.json  example_schema_operators.json  example_suite.json  example_suite_modifiers.json  example_suite_with_everything.json  example_with_file.json  example_with_fixed_output.json  out.json
examples/scripts/: custom_metric_examples.py  custom_models_examples.py  end_to_end_workflow.py  out.csv  output_context_example.py  project_examples.py  review_example.ipynb  run_examples.py  suite_examples.py
examples/suites/: example_suite.json  example_suite_with_everything.json  example_with_file.json
examples/v2/: examples.py  run_examples.py  suite_examples.py  suite_operations.py
tests/: test_object_mappings.py  test_project_support.py  test_rerun_checks.py
vals/: __init__.py
vals/cli/: main.py  project.py  rag.py  run.py  suite.py  util.py
vals/graphql/: suite_queries.graphql
vals/graphql_client/: __init__.py  add_all_tests_to_queue_single.py  add_batch_tests.py  add_or_remove_users_to_run_review.py  batch_add_question_answer_pairs.py  client.py  create_or_update_test_suite.py  create_question_answer_set.py  create_rag_suite.py  create_test_suite.py  default_project.py  delete_test_suite.py  enums.py  fragments.py  get_active_custom_operators.py  get_custom_metric.py  get_default_parameters.py  get_operators.py  get_rag_suites.py  get_run_dataframe.py  get_run_status.py  get_single_run_review.py  get_single_test_reviews_with_count.py  get_test_data.py  get_test_suite_data.py  get_test_suites.py  get_test_suites_with_count.py  get_user_options.py  input_types.py  list_projects.py  list_question_answer_pairs.py  list_runs.py  mark_question_answer_set_as_complete.py  poll_custom_metric_task.py  pull_run.py  pull_test_results_with_count.py  remove_old_tests.py  rerun_tests.py  (+14 more)
(+78 files in other folders)
