[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "valsai"
authors = [
  { name = "Langston Nashold" },
  { name = "Rayan Krishnan" }
]
description = "SDK for the Vals AI Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
  "Click",
  "gql",
  "tqdm",
  "requests",
  "pandas",
  "descope",
  "pydantic",
  "httpx",
  "tabulate",
  "inspect-ai",
  "aiohttp",
  "aiofiles",
  "pillow",
  "redis",
  "typing-extensions>=4.14.0",
  "openai==1.93.2",
  "anthropic==0.57.1",
  "together==1.5.21",
  "mistralai==1.9.2",
  "xai-sdk==1.0.0",
  "ai21==4.0.3",
  "boto3==1.38.27",
  "google-genai[aiohttp]==1.26.0",
]
[dependency-groups]
dev = ["ariadne-codegen", "ruff", "basedpyright"]
parsing = ["pypdf", "pypandoc-binary"]

[project.scripts]
vals = "vals.cli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vals*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.ruff]
exclude = ["examples", "vals/graphql_client"]

[tool.basedpyright]
exclude = ["examples", "vals/graphql_client"]
reportExplicitAny = false
