[build-system]
requires = ["setuptools>=61", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "valsai"
authors = [
  { name = "Langston Nashold" },
  { name = "Rayan Krishnan" }
]
description = "SDK for the Vals AI Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dynamic = ["version"]

dependencies = [
  "Click",
  "gql",
  "tqdm",
  "requests",
  "pandas",
  "descope",
  "pydantic",
  "httpx",
  "tabulate",
  "inspect-ai",
  "aiohttp",
  "aiofiles",
  "pytest-asyncio>=1.1.0",
]
[dependency-groups]
dev = ["pytest", "ariadne-codegen", "ruff", "basedpyright"]
parsing = ["pypdf", "pypandoc-binary"]

[project.scripts]
vals = "vals.cli.main:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["vals*"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"

[tool.ruff]
exclude = ["examples", "vals/graphql_client"]

[tool.basedpyright]
typeCheckingMode = "basic"
exclude = ["examples", "vals/graphql_client", ".*"]
